Gulp old configuration

--- a/cahee/package.json
+++ b/cahee/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "node",
+  "name": "cahee",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Dmitriy Kulikov",
   "license": "ISC",
   "devDependencies": {
     "browser-sync": "^2.18.2",
