--- a/cahee/package.json
+++ b/cahee/package.json
@@ -9,14 +9,18 @@
   "author": "Dmitriy Kulikov",
   "license": "ISC",
   "devDependencies": {
+    "autoprefixer": "^9.1.3",
     "browser-sync": "^2.24",
     "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^5.0.0",
     "gulp-clean-css": "^3.0.0",
     "gulp-imagemin": "^4.1.0",
     "gulp-notify": "^3.2.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^4.0.0",
+    "gulp-sourcemaps": "^2.6.4",
     "gulp-uglify": "^3.0.0",
     "gulp-watch": "^5.0.0"
-  }
+  },
+  "dependencies": {}
 }
